--- a/notebooks/Social Computing/2.1 - NLP Data Preprocessing.ipynb
+++ b/notebooks/Social Computing/2.1 - NLP Data Preprocessing.ipynb
@@ -9,34 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Looking in indexes: https://pypi.org/simple, https://pypi.ngc.nvidia.com\n",
-      "Requirement already satisfied: scikit-learn in /opt/conda/lib/python3.11/site-packages (1.4.1.post1)\n",
-      "Requirement already satisfied: numpy<2.0,>=1.19.5 in /opt/conda/lib/python3.11/site-packages (from scikit-learn) (1.26.4)\n",
-      "Requirement already satisfied: scipy>=1.6.0 in /opt/conda/lib/python3.11/site-packages (from scikit-learn) (1.12.0)\n",
-      "Requirement already satisfied: joblib>=1.2.0 in /opt/conda/lib/python3.11/site-packages (from scikit-learn) (1.3.2)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /opt/conda/lib/python3.11/site-packages (from scikit-learn) (3.3.0)\n",
-      "Looking in indexes: https://pypi.org/simple, https://pypi.ngc.nvidia.com\n",
-      "Requirement already satisfied: nltk in /home/jovyan/.local/lib/python3.11/site-packages (3.9.1)\n",
-      "Requirement already satisfied: click in /opt/conda/lib/python3.11/site-packages (from nltk) (8.1.7)\n",
-      "Requirement already satisfied: joblib in /opt/conda/lib/python3.11/site-packages (from nltk) (1.3.2)\n",
-      "Requirement already satisfied: regex>=2021.8.3 in /home/jovyan/.local/lib/python3.11/site-packages (from nltk) (2024.9.11)\n",
-      "Requirement already satisfied: tqdm in /opt/conda/lib/python3.11/site-packages (from nltk) (4.66.2)\n",
-      "Looking in indexes: https://pypi.org/simple, https://pypi.ngc.nvidia.com\n",
-      "Requirement already satisfied: emoji in /opt/conda/lib/python3.11/site-packages (2.14.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%pip install scikit-learn\n",
-    "%pip install nltk\n",
-    "%pip install emoji"
+    "# %pip install scikit-learn\n",
+    "# %pip install nltk\n",
+    "# %pip install emoji"
    ]
   },
   {
@@ -51,9 +30,7 @@
       "[nltk_data] Downloading package wordnet to /home/vscode/nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n",
       "[nltk_data] Downloading package omw-1.4 to /home/vscode/nltk_data...\n",
-      "[nltk_data]   Package omw-1.4 is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to /home/vscode/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
+      "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
      ]
     },
     {
@@ -71,14 +48,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import nltk\n",
-    "from nltk.corpus import stopwords\n",
-    "from nltk.stem import WordNetLemmatizer\n",
-    "from nltk.stem import PorterStemmer\n",
-    "import emoji\n",
-    "\n",
     "nltk.download('wordnet')\n",
-    "nltk.download('omw-1.4')\n",
-    "nltk.download('stopwords')"
+    "nltk.download('omw-1.4')"
    ]
   },
   {
@@ -90,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +266,7 @@
        "[851 rows x 7 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,67 +313,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to /home/vscode/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "from pandas.errors import EmptyDataError\n",
+    "from nltk.corpus import stopwords\n",
+    "\n",
+    "nltk.download('stopwords')\n",
     "\n",
     "try:\n",
-    "  basic_stopwords = list(\n",
+    "  BASIC_STOPWORDS = list(\n",
     "    # Handle empty data error\n",
     "    pd.read_csv('basic_stopwords.txt', header=None).values.flatten()\n",
     "  )\n",
     "except EmptyDataError:\n",
-    "  basic_stopwords = []\n",
+    "  BASIC_STOPWORDS = []\n",
     "\n",
     "try:\n",
-    "  domain_stopwords = list(\n",
+    "  DOMAIN_STOPWORDS = list(\n",
     "    pd.read_csv('domain_stopwords.txt', header=None).values.flatten()\n",
     "  )\n",
     "except EmptyDataError:\n",
-    "  domain_stopwords = []"
+    "  DOMAIN_STOPWORDS = []\n",
+    "\n",
+    "EN_STOPWORDS_LIST = stopwords.words('english')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Clean corpus"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def preprocess_text(corpus, text_column='text'):\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "from nltk.stem import PorterStemmer\n",
+    "import emoji\n",
+    "\n",
+    "\n",
+    "def clean_corpus(corpus, text_column='text'):\n",
+    "  '''\n",
+    "  Clean the text data in the specified column of the DataFrame.\n",
+    "  '''\n",
     "  cleaned_corpus = corpus.copy()\n",
     "\n",
-    "  # Lowercase\n",
-    "  cleaned_corpus['cleaned_text'] = cleaned_corpus[text_column].str.lower()\n",
+    "  # Force text_column as string\n",
+    "  cleaned_corpus['cleaned_text'] = cleaned_corpus[text_column].astype(str)\n",
     "\n",
-    "  # Lemmatize (by default, lemmatize nouns)\n",
-    "  # Other options:\n",
-    "  #   'v' for verbs\n",
-    "  #   'a' for adjectives\n",
-    "  #   'r' for adverbs\n",
-    "  #   's' for satellites adjectives (adjectives that appear after verbs)\n",
-    "  lemmatizer = WordNetLemmatizer()\n",
-    "  cleaned_corpus['cleaned_text'] = cleaned_corpus['cleaned_text'].apply(\n",
-    "    lambda text: ' '.join(\n",
-    "      [lemmatizer.lemmatize(word, pos='n') for word in str(text).split()]\n",
-    "    )\n",
-    "  )\n",
+    "  # Transform into lowercase\n",
+    "  cleaned_corpus['cleaned_text'] = cleaned_corpus['cleaned_text'].str.lower()\n",
     "\n",
-    "  # Stemmer\n",
-    "  stemmer = PorterStemmer()\n",
-    "  cleaned_corpus['cleaned_text'] = cleaned_corpus['cleaned_text'].apply(\n",
-    "      lambda text: ' '.join(\n",
-    "        [stemmer.stem(word) for word in str(text).split()]\n",
-    "      )\n",
-    "  )\n",
+    "  # Remove usernames, non-alphanumeric characters, and links\n",
+    "  # docs['cleaned_text'] = docs['cleaned_text'].str.replace(r'(@[A-Za-z0-9_]+)|([^A-Za-z0-9_ \\t])|(\\w+:\\/\\/\\S+)', '')\n",
+    "\n",
+    "  # # Lemmatize (by default, lemmatize nouns)\n",
+    "  # # Other options:\n",
+    "  # #   'v' for verbs\n",
+    "  # #   'a' for adjectives\n",
+    "  # #   'r' for adverbs\n",
+    "  # #   's' for satellites adjectives (adjectives that appear after verbs)\n",
+    "  # lemmatizer = WordNetLemmatizer()\n",
+    "  # cleaned_corpus['cleaned_text'] = cleaned_corpus['cleaned_text'].apply(\n",
+    "  #   lambda text: ' '.join(\n",
+    "  #     [lemmatizer.lemmatize(word, pos='n') for word in str(text).split()]\n",
+    "  #   )\n",
+    "  # )\n",
+    "\n",
+    "  # # Stemmer\n",
+    "  # stemmer = PorterStemmer()\n",
+    "  # cleaned_corpus['cleaned_text'] = cleaned_corpus['cleaned_text'].apply(\n",
+    "  #     lambda text: ' '.join(\n",
+    "  #       [stemmer.stem(word) for word in str(text).split()]\n",
+    "  #     )\n",
+    "  # )\n",
     "\n",
     "  # Remove NLTK stopwords\n",
-    "  en_stopwords_list = stopwords.words('english')\n",
     "  cleaned_corpus['cleaned_text'] = cleaned_corpus['cleaned_text'].apply(\n",
     "    lambda text: ' '.join(\n",
     "      [\n",
-    "        word for word in text.split() if word not in en_stopwords_list\n",
+    "        word for word in text.split() if word not in EN_STOPWORDS_LIST\n",
     "      ]\n",
     "    )\n",
     "  )\n",
@@ -410,14 +415,14 @@
     "  # Remove basic stopwords\n",
     "  cleaned_corpus['cleaned_text'] = cleaned_corpus['cleaned_text'].apply(\n",
     "    lambda text: ' '.join(\n",
-    "      [word for word in text.split() if word not in basic_stopwords]\n",
+    "      [word for word in text.split() if word not in BASIC_STOPWORDS]\n",
     "    )\n",
     "  )\n",
     "\n",
     "  # Remove domain stopwords\n",
     "  cleaned_corpus['cleaned_text'] = cleaned_corpus['cleaned_text'].apply(\n",
     "    lambda text: ' '.join(\n",
-    "      [word for word in text.split() if word not in domain_stopwords]\n",
+    "      [word for word in text.split() if word not in DOMAIN_STOPWORDS]\n",
     "    )\n",
     "  )\n",
     "\n",
@@ -433,16 +438,19 @@
     "  # Remove emojis using emoji library\n",
     "  cleaned_corpus['cleaned_text'] = cleaned_corpus['cleaned_text'].apply(\n",
     "    lambda text: ' '.join(\n",
-    "      [word for word in text.split() if word not in list(emoji.EMOJI_DATA.keys())]\n",
+    "      emoji.replace_emoji(text, replace=' ').split()\n",
     "    )\n",
     "  )\n",
     "\n",
-    "  return cleaned_corpus['cleaned_text']"
+    "  # Remove NaN values\n",
+    "  cleaned_corpus['cleaned_text'] = cleaned_corpus['cleaned_text'].replace(np.nan, '', regex=True)\n",
+    "\n",
+    "  return cleaned_corpus"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +494,7 @@
        "      <td>rappler</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>local court offer refuge face formid foreign a...</td>\n",
+       "      <td>local courts offer refuge faced formidable for...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -497,7 +505,7 @@
        "      <td>rappler</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>claim former presid rodrigo dutert hold guin w...</td>\n",
+       "      <td>claim former president rodrigo duterte holds g...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -508,7 +516,7 @@
        "      <td>rappler</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>manila philippin may bagong hile ang defens te...</td>\n",
+       "      <td>manila philippines may bagong hiling ang defen...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -519,7 +527,7 @@
        "      <td>rappler</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>today headlin latest news philippin around wor...</td>\n",
+       "      <td>today s headlines latest news philippines arou...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -530,7 +538,7 @@
        "      <td>rappler</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>manila philippin prosecutor karim khan leav in...</td>\n",
+       "      <td>manila philippines prosecutor karim khan leave...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -563,7 +571,7 @@
        "      <td>youtube</td>\n",
        "      <td>3.0</td>\n",
        "      <td>UgwBBzeGtqWna6y4KUJ4AaABAg</td>\n",
-       "      <td>vp rude entitl arrog like father they r use sp...</td>\n",
+       "      <td>vp rude entitled arrogant like father used spe...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>848</th>\n",
@@ -574,7 +582,7 @@
        "      <td>youtube</td>\n",
        "      <td>0.0</td>\n",
        "      <td>UgwBBzeGtqWna6y4KUJ4AaABAg</td>\n",
-       "      <td>countri this veri interesting</td>\n",
+       "      <td>country this interesting</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>849</th>\n",
@@ -596,7 +604,7 @@
        "      <td>youtube</td>\n",
        "      <td>0.0</td>\n",
        "      <td>UgwBBzeGtqWna6y4KUJ4AaABAg</td>\n",
-       "      <td>that true</td>\n",
+       "      <td>that s true</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -657,38 +665,73 @@
        "850  UgwBBzeGtqWna6y4KUJ4AaABAg   \n",
        "\n",
        "                                          cleaned_text  \n",
-       "0    local court offer refuge face formid foreign a...  \n",
-       "1    claim former presid rodrigo dutert hold guin w...  \n",
-       "2    manila philippin may bagong hile ang defens te...  \n",
-       "3    today headlin latest news philippin around wor...  \n",
-       "4    manila philippin prosecutor karim khan leav in...  \n",
+       "0    local courts offer refuge faced formidable for...  \n",
+       "1    claim former president rodrigo duterte holds g...  \n",
+       "2    manila philippines may bagong hiling ang defen...  \n",
+       "3    today s headlines latest news philippines arou...  \n",
+       "4    manila philippines prosecutor karim khan leave...  \n",
        "..                                                 ...  \n",
        "846  ul l dignified pinapakyuhan nga si bong daza s...  \n",
-       "847  vp rude entitl arrog like father they r use sp...  \n",
-       "848                      countri this veri interesting  \n",
+       "847  vp rude entitled arrogant like father used spe...  \n",
+       "848                           country this interesting  \n",
        "849                               cvoutdoors palamunin  \n",
-       "850                                          that true  \n",
+       "850                                        that s true  \n",
        "\n",
        "[851 rows x 8 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "corpus['cleaned_text'] = preprocess_text(corpus)\n",
-    "corpus"
+    "cleaned_corpus = clean_corpus(corpus, text_column='text')\n",
+    "cleaned_corpus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cleaning emojis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wait ko si dugong mag salita na JOKE LNG😁☺️<br>Kayu naman naniniwla agad😂\n",
+      "Wait ko si dugong mag salita na JOKE LNG EMOJI EMOJI<br>Kayu naman naniniwla agad EMOJI\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_sentence = \"hello world @helloWorld 😅\"\n",
+    "sample_sentence_2 = \"Wait ko si dugong mag salita na JOKE LNG😁☺️<br>Kayu naman naniniwla agad😂\"\n",
+    "\n",
+    "# Clean emojis\n",
+    "sample_sentence_without_emoji = emoji.replace_emoji(\n",
+    "  sample_sentence, replace=' EMOJI')\n",
+    "sample_sentence_2_without_emoji = emoji.replace_emoji(\n",
+    "  sample_sentence_2, replace=' EMOJI')\n",
+    "\n",
+    "print(sample_sentence_2)\n",
+    "print(sample_sentence_2_without_emoji)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "corpus.to_excel('cleaned_corpus.xlsx', index=False)"
+    "cleaned_corpus.to_excel('cleaned_corpus.xlsx', index=False)"
    ]
   }
  ],
